# support-ticket-assistant

./: .env.example  .gitleaks.toml  Makefile  README.md  SPEC.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
evals/: cases.py  gate.py  loader.py  run_eval.py  runner.py
evals/datasets/: golden_triage.json  groundedness.json  redteam_input.json  redteam_output.json
evals/tests/: conftest.py  test_ci_workflow.py  test_eval_datasets.py  test_eval_gate.py  test_eval_loader.py  test_eval_report.py  test_eval_runner.py
services/api/: Dockerfile
services/api/app/: __init__.py  config.py  crypto.py  logging_config.py  main.py  reference_code.py  security.py
services/api/app/graph/: audit.py  corpus.py  feedback.py  intake.py  runtime.py  state.py  trace.py  workflow.py
services/api/app/graph/nodes/: draft.py  extract.py  fuse.py  ocr.py  retrieve.py  triage.py  validate.py
services/api/app/guardrails/: injection.py  injection_signatures.json  output.py  output_signatures.json
services/api/app/llm/: base.py  fake.py  ollama.py  thinking.py
services/api/app/mcp_clients/: __init__.py  base.py  email.py  kb.py
services/api/app/observability/: langfuse_tracer.py
services/api/app/prompts/: fewshot.py  registry.py  resolver.py
services/api/app/routes/: __init__.py  customer.py  health.py  rep.py
services/api/app/schemas/: corpus.py  draft.py  enums.py  extraction.py  feedback.py  guardrails.py  kb.py  rep.py  ticket.py  triage.py  validation.py
services/api/tests/: conftest.py  test_audit_completeness.py  test_config.py  test_corpus.py  test_crypto.py  test_feedback.py  test_fewshot.py  test_graph_audit.py  test_graph_trace.py  test_guard_injection.py  test_guard_output.py  test_intake.py  test_integration_email_mcp.py  test_llm_capture.py  test_llm_fake.py  test_llm_ollama.py  test_llm_thinking.py  test_logging_redaction.py  test_mcp_client_base.py  test_mcp_client_email.py  test_mcp_client_kb.py  test_mcp_client_singleton.py  test_node_draft.py  test_node_extract.py  test_node_fuse.py  test_node_ocr.py  test_node_retrieve.py  test_node_triage.py  test_node_validate.py  test_prompt_resolver.py  test_prompts.py  test_reference_code.py  test_routes_customer.py  test_routes_health.py  test_routes_rep.py  test_schema_draft.py  test_schema_enums.py  test_schema_extraction.py  test_schema_feedback.py  test_schema_kb.py  (+4 more)
services/email_mcp/: Dockerfile  db.py  export_training_data.py  migrate.py  server.py
services/email_mcp/migrations/: 0001_initial.sql  0002_audit_immutable.sql  0003_feedback_category.sql  0004_ticket_trace_id.sql
services/email_mcp/tests/: conftest.py  test_audit.py  test_corpus_store.py  test_export_training_data.py  test_feedback_store.py  test_fewshot_lookup.py  test_lookup_by_code.py  test_migrations.py  test_pagination.py  test_status_and_send.py  test_ticket_tools.py  test_trace_id_store.py
services/frontend/: Dockerfile  api_client.py  app.py  config.py  formatting.py
services/frontend/tests/: test_api_client.py  test_app.py  test_formatting.py
services/frontend/views/: check_my_case.py  customer.py  rep_workspace.py
services/kb_mcp/: Dockerfile  kb_search.py  server.py
services/kb_mcp/mock_kb/: kb-account-locked.json  kb-app-error.json  kb-card-declined.json  kb-card-lost-stolen.json  kb-dispute-charge.json  kb-download-statements.json  kb-failed-payment.json  kb-loan-application.json  kb-pending-charge.json  kb-reset-password.json  kb-two-factor.json  kb-update-contact.json
services/kb_mcp/providers/: base.py  mock_kb.py
services/kb_mcp/tests/: test_mock_kb_provider.py  test_search_knowledge_base.py
tasks/: plan.md  todo.md
