[project]
name = "support-ticket-assistant"
version = "0.1.0"
description = "Human-in-the-loop support-ticket assistant for a financial institution (LangGraph + MCP + Streamlit)."
requires-python = ">=3.12"
# Runtime dependencies are added incrementally as each task needs them (SPEC §13:
# ask before adding a new dependency). Task 1 only needs config loading.
dependencies = [
    "pydantic>=2,<3",
    "pydantic-settings>=2,<3",
    # email_mcp (Task 3): Postgres driver (plain SQL) + official MCP SDK.
    "psycopg[binary]>=3,<4",
    "mcp>=1,<2",
    # api (Task 4): FastAPI backend + ASGI server (SPEC §8). The MCP client uses
    # the SDK's streamable-HTTP transport (httpx, pulled in transitively by mcp).
    "fastapi>=0.115,<1",
    "uvicorn[standard]>=0.30,<1",
    # frontend (Task 6): Streamlit UI (SPEC §8) + explicit httpx for its typed api
    # client (already transitive via mcp; pinned here as a direct dependency).
    "streamlit>=1.38,<2",
    "httpx>=0.27,<1",
]

[dependency-groups]
# Dev/tooling deps managed by uv (SPEC §9: black, ruff, mypy, pytest).
dev = [
    "black>=24",
    "ruff>=0.6",
    "mypy>=1.11",
    "pytest>=8",
    # email_mcp contract tests run against a throwaway Postgres container (Task 3).
    "testcontainers[postgres]>=4,<5",
    # api (Task 4): the email MCP client wrapper is async, so its unit tests are too.
    "pytest-asyncio>=0.24,<1",
]

[tool.black]
line-length = 100
target-version = ["py312"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.ruff.lint.flake8-bugbear]
# `Depends()`/`Security()` in argument defaults is FastAPI's intended idiom, not a
# B008 mutable-call bug; allow them so the api routes/deps read the standard way.
extend-immutable-calls = ["fastapi.Depends", "fastapi.Security"]

[tool.ruff.lint.isort]
# Our own service packages, so imports group as first-party (extend per service).
# `db`/`server` are email_mcp's top-level modules (Task 3). `tests` is imported
# as a package by the api route tests (e.g. `from tests.conftest import ...`).
# `api_client`/`config`/`formatting`/`views` are the frontend's top-level modules (Task 6).
# `kb_search`/`providers` are kb_mcp's top-level module + package (Task 8).
known-first-party = ["app", "db", "server", "kb_search", "providers", "tests", "api_client", "config", "formatting", "views"]

[tool.mypy]
python_version = "3.12"
strict = true
# Makes mypy understand Pydantic models/BaseSettings (env-populated fields are not
# required positional args; validators, aliases, etc. are typed correctly).
plugins = ["pydantic.mypy"]
# Each service is a separate import root; extend as services are added.
mypy_path = ["services/api", "services/email_mcp", "services/kb_mcp", "services/frontend"]
explicit_package_bases = true

# testcontainers ships no type stubs / py.typed marker; used only in the
# email_mcp contract tests. Silence the missing-import error without loosening
# strictness anywhere else.
[[tool.mypy.overrides]]
module = ["testcontainers.*"]
ignore_missing_imports = true

# Streamlit's type coverage is partial; the frontend's thin views/entry import it
# but hold no tested logic (that lives in the type-checked api_client/formatting/
# config modules — SPEC §9). Silence its missing-stub noise without loosening
# strictness elsewhere.
[[tool.mypy.overrides]]
module = ["streamlit.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
# Services are independent import roots. Extend this list as tasks add services.
# services/api provides `app.schemas` (shared contract types the email_mcp and
# kb_mcp contract tests validate against); services/email_mcp provides `db`/`server`;
# services/kb_mcp provides `kb_search`/`providers`.
pythonpath = ["services/api", "services/email_mcp", "services/kb_mcp", "services/frontend"]
testpaths = ["services"]
# The api email MCP client is async (SPEC §11); auto mode lets `async def` tests
# run without a per-test marker.
asyncio_mode = "auto"
