[project]
name = "support-ticket-assistant"
version = "0.1.0"
description = "Human-in-the-loop support-ticket assistant for a financial institution (LangGraph + MCP + Streamlit)."
requires-python = ">=3.12"
# Runtime dependencies are added incrementally as each task needs them (SPEC §13:
# ask before adding a new dependency). Task 1 only needs config loading.
dependencies = [
    "pydantic>=2,<3",
    "pydantic-settings>=2,<3",
    # email_mcp (Task 3): Postgres driver (plain SQL) + official MCP SDK.
    "psycopg[binary]>=3,<4",
    "mcp>=1,<2",
    # api (Task 4): FastAPI backend + ASGI server (SPEC §8). The MCP client uses
    # the SDK's streamable-HTTP transport (httpx, pulled in transitively by mcp).
    "fastapi>=0.115,<1",
    "uvicorn[standard]>=0.30,<1",
    # frontend (Task 6): Streamlit UI (SPEC §8) + explicit httpx for its typed api
    # client (already transitive via mcp; pinned here as a direct dependency).
    "streamlit>=1.38,<2",
    "httpx>=0.27,<1",
    # api (Task 17): the LangGraph workflow engine (SPEC §2/§5) + its Postgres
    # checkpointer, so a case pending human review survives a restart (SPEC §5).
    "langgraph>=0.2,<1",
    "langgraph-checkpoint-postgres>=2,<3",
    # api (Task 23): authenticated encryption (Fernet) for PII at rest (SPEC §6).
    # Floor at 48.0.1: earlier wheels bundle a vulnerable OpenSSL (GHSA-537c-gmf6-5ccf,
    # HIGH) that the trivy security gate blocks. The Fernet API is unchanged.
    "cryptography>=48.0.1,<49",
    # api (Task 24): structured logging with a PII-redaction processor (SPEC §6).
    "structlog>=24,<26",
    # api (Task 31): self-hosted Langfuse tracing SDK (SPEC §7.2). Pinned to v2 to
    # match the `langfuse:2` compose image, whose self-host needs only its own
    # Postgres (no ClickHouse/Redis/object-store), fitting the local-only posture.
    "langfuse>=2,<3",
]

[dependency-groups]
# Dev/tooling deps managed by uv (SPEC §9: black, ruff, mypy, pytest).
dev = [
    "black>=24",
    "ruff>=0.6",
    "mypy>=1.11",
    "pytest>=8",
    # email_mcp contract tests run against a throwaway Postgres container (Task 3).
    "testcontainers[postgres]>=4,<5",
    # api (Task 4): the email MCP client wrapper is async, so its unit tests are too.
    "pytest-asyncio>=0.24,<1",
    # ci (Task 33): the CI-workflow structural test parses `.github/workflows/ci.yml`.
    # PyYAML is already present transitively (langgraph/langfuse); pin it as a direct
    # dev dependency so that test's `import yaml` is an explicit contract, not a
    # transitive that a future dependency bump could silently drop.
    "pyyaml>=6,<7",
]

[tool.uv]
# Constrain a transitive dependency (streamlit → gitpython) up to its patched release.
# gitpython < 3.1.52 carries HIGH command-injection CVEs (GHSA-2f96-g7mh-g2hx,
# GHSA-956x-8gvw-wg5v, GHSA-rwj8-pgh3-r573, GHSA-v396-v7q4-x2qj) that the trivy gate
# blocks. A constraint bumps the locked version without adding gitpython as a direct dep.
constraint-dependencies = ["gitpython>=3.1.52"]

[tool.black]
line-length = 100
target-version = ["py312"]

[tool.bandit]
# Security gate (SPEC §12.4). Bandit is SAST over *shippable* code, so exclude the test
# suites: tests use `assert` and embed dummy tokens/keys by design, which trip B101/B105
# as noise, not real risk. B101 (assert_used) is skipped globally too — db.py has a few
# `assert row is not None` narrowing hints after `INSERT ... RETURNING` that are safe and
# never a runtime guard. Real checks (hardcoded secrets, bind-all, SQL injection,
# subprocess, …) stay enabled; the two intentional 0.0.0.0 binds carry inline `# nosec B104`.
exclude_dirs = ["*/tests/*"]
skips = ["B101"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.ruff.lint.flake8-bugbear]
# `Depends()`/`Security()` in argument defaults is FastAPI's intended idiom, not a
# B008 mutable-call bug; allow them so the api routes/deps read the standard way.
extend-immutable-calls = ["fastapi.Depends", "fastapi.Security"]

[tool.ruff.lint.isort]
# Our own service packages, so imports group as first-party (extend per service).
# `db`/`server` are email_mcp's top-level modules (Task 3). `tests` is imported
# as a package by the api route tests (e.g. `from tests.conftest import ...`).
# `api_client`/`config`/`formatting`/`views` are the frontend's top-level modules (Task 6).
# `kb_search`/`providers` are kb_mcp's top-level module + package (Task 8).
# `evals` is the repo-root eval-suite package (Task 32).
known-first-party = ["app", "db", "server", "kb_search", "providers", "tests", "api_client", "config", "formatting", "views", "evals"]

[tool.mypy]
python_version = "3.12"
strict = true
# Makes mypy understand Pydantic models/BaseSettings (env-populated fields are not
# required positional args; validators, aliases, etc. are typed correctly).
plugins = ["pydantic.mypy"]
# Each service is a separate import root; extend as services are added.
mypy_path = ["services/api", "services/email_mcp", "services/kb_mcp", "services/frontend"]
explicit_package_bases = true

# testcontainers ships no type stubs / py.typed marker; used only in the
# email_mcp contract tests. Silence the missing-import error without loosening
# strictness anywhere else.
[[tool.mypy.overrides]]
module = ["testcontainers.*"]
ignore_missing_imports = true

# Streamlit's type coverage is partial; the frontend's thin views/entry import it
# but hold no tested logic (that lives in the type-checked api_client/formatting/
# config modules — SPEC §9). Silence its missing-stub noise without loosening
# strictness elsewhere.
[[tool.mypy.overrides]]
module = ["streamlit.*"]
ignore_missing_imports = true

# LangGraph (Task 17) is imported only by the workflow-assembly module. Silence the
# missing-stub noise if a released build ships without a py.typed marker, without
# loosening strictness anywhere else.
[[tool.mypy.overrides]]
module = ["langgraph.*", "langgraph_checkpoint.*"]
ignore_missing_imports = true

# Langfuse (Task 31) is imported only by the `observability.langfuse_tracer` adapter,
# behind the lazily-built tracer factory. Silence its missing-stub noise (the v2 SDK
# ships no py.typed marker) without loosening strictness anywhere else.
[[tool.mypy.overrides]]
module = ["langfuse.*"]
ignore_missing_imports = true

# These modules are the thin seam that binds our typed state to LangGraph's own
# generics (`StateGraph`, `CompiledStateGraph`, `BaseCheckpointSaver`), whose type-
# parameter arity shifts across LangGraph versions: `workflow` assembles the graph,
# `runtime` builds/compiles it per app, and the rep-action `routes.rep` resumes it.
# Use those types bare in this seam and disable only the `type-arg` check here, so a
# LangGraph upgrade never breaks the type gate on an arity change while the rest of
# the app stays strict.
[[tool.mypy.overrides]]
module = ["app.graph.workflow", "app.graph.runtime", "app.routes.rep"]
disable_error_code = ["type-arg"]

[tool.pytest.ini_options]
# Services are independent import roots. Extend this list as tasks add services.
# services/api provides `app.schemas` (shared contract types the email_mcp and
# kb_mcp contract tests validate against); services/email_mcp provides `db`/`server`;
# services/kb_mcp provides `kb_search`/`providers`. The repo root (".") is added so
# the top-level `evals` package (SPEC §8: golden datasets + eval runner) imports as
# `evals.*`; the eval runner reuses the api's `app.*` modules, already on this path.
# The repo root has no `tests/` dir of its own, so it does not merge into the shared
# `tests` namespace the api route tests import from.
pythonpath = ["services/api", "services/email_mcp", "services/kb_mcp", "services/frontend", "."]
testpaths = ["services", "evals"]
# The api email MCP client is async (SPEC §11); auto mode lets `async def` tests
# run without a per-test marker.
asyncio_mode = "auto"
